# OdomComputation

./: README.md
progetto1/: CMakeLists.txt  package.xml
progetto1/cfg/: parameters.cfg
progetto1/launch/: progetto1.launch
progetto1/msg/: Motor4Speeds.msg
progetto1/rviz/: progetto1.rviz
progetto1/src/: estimator.cpp  scout_our_odom.cpp  velocity_estimate.cpp  wheels_synchronizer.cpp
progetto1/srv/: setPose.srv
